[gd_scene load_steps=29 format=3 uid="uid://cnpisc0ppc6qp"]

[ext_resource type="Script" uid="uid://c02eddk36m51" path="res://player/player_character.gd" id="1_c2kd2"]
[ext_resource type="Script" uid="uid://bbjrrqys0dutu" path="res://player/player_camera.gd" id="2_yxov5"]
[ext_resource type="PackedScene" uid="uid://bxyx1h7i814d6" path="res://UI/pause menu/pause_menu.tscn" id="3_lwsbi"]
[ext_resource type="Shader" uid="uid://bu13jc3rhv6w5" path="res://player/whiten.gdshader" id="4_qep63"]
[ext_resource type="Texture2D" uid="uid://bqr7nq887fhtb" path="res://player/sprites/gravityPlayerSprite_EyesFalse.png" id="5_w3pip"]
[ext_resource type="Script" uid="uid://cc0g12425cq4j" path="res://player/player_stars_parallax.gd" id="6_85wnx"]
[ext_resource type="Texture2D" uid="uid://cu8vrej6ewvcs" path="res://global elements/parallax/stars/Star1.png" id="6_msyva"]
[ext_resource type="Texture2D" uid="uid://dcnqq4vg13b5g" path="res://global elements/parallax/stars/Star2.png" id="7_ukj1r"]
[ext_resource type="Texture2D" uid="uid://bp44vh5m3bfo5" path="res://global elements/parallax/stars/Star3.png" id="8_qmn1e"]
[ext_resource type="Texture2D" uid="uid://dbetihp3me8at" path="res://player/sprites/gravityPlayerSpriteAll.png" id="9_vx43m"]
[ext_resource type="AudioStream" uid="uid://cr6djfcjftlna" path="res://player/slide.mp3" id="10_oggeb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2ywmw"]
size = Vector2(9.92014, 22)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_f2j5l"]
radius = 3.96806
height = 20.0

[sub_resource type="Animation" id="Animation_i5e0n"]
resource_name = "Idle"
length = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("playerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerCollision:shape:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(9.92014, 22)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerCollision:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -13)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DeathDetection/DeathDetectionCollision:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("DeathDetection/DeathDetectionCollision:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -12)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("playerEyeSprite:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_uqhx3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("playerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerCollision:shape:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(9.92014, 22)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerCollision:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -13)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DeathDetection/DeathDetectionCollision:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -12)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("DeathDetection/DeathDetectionCollision:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_5welk"]
resource_name = "dash"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("playerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [24]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerCollision:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -13)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerCollision:shape:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(9.92014, 22)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DeathDetection/DeathDetectionCollision:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -12)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("DeathDetection/DeathDetectionCollision:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("playerEyeSprite:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [24]
}

[sub_resource type="Animation" id="Animation_t2wv5"]
resource_name = "jump"
length = 0.5
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerCollision:shape:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(9.92014, 22)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerCollision:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -13)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DeathDetection/DeathDetectionCollision:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -12)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("DeathDetection/DeathDetectionCollision:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_8w0ki"]
resource_name = "slide"
length = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("playerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [32]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DeathDetection/DeathDetectionCollision:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-5.41339e-12, -13)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DeathDetection/DeathDetectionCollision:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.57079]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerCollision:shape:size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(21.8243, 8)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PlayerCollision:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -13)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("playerEyeSprite:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [32]
}

[sub_resource type="Animation" id="Animation_g4cth"]
resource_name = "walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("playerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 14, 15]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerCollision:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -13)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerCollision:shape:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(9.92014, 22)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DeathDetection/DeathDetectionCollision:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -12)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("DeathDetection/DeathDetectionCollision:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("playerEyeSprite:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 14, 15]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.1, 0.5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": ["left"],
"method": &"step_audio"
}, {
"args": ["right"],
"method": &"step_audio"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ce6h6"]
_data = {
&"Idle": SubResource("Animation_i5e0n"),
&"RESET": SubResource("Animation_uqhx3"),
&"dash": SubResource("Animation_5welk"),
&"jump": SubResource("Animation_t2wv5"),
&"slide": SubResource("Animation_8w0ki"),
&"walk": SubResource("Animation_g4cth")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3d672"]
shader = ExtResource("4_qep63")
shader_parameter/whiten = false
shader_parameter/mix_weight = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qep63"]
shader = ExtResource("4_qep63")
shader_parameter/whiten = false
shader_parameter/mix_weight = 1.0

[sub_resource type="Gradient" id="Gradient_ah1fx"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_wi17q"]
gradient = SubResource("Gradient_ah1fx")
width = 128
height = 128
fill = 1
fill_from = Vector2(0.5, 0.495726)
fill_to = Vector2(0.923077, 0.653846)

[sub_resource type="Environment" id="Environment_wi17q"]

[sub_resource type="Animation" id="Animation_3d672"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("playerSprite:material:shader_parameter/whiten")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("playerEyeSprite:material:shader_parameter/whiten")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("playerEyeSprite:material:shader_parameter/mix_weight")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("playerSprite:material:shader_parameter/mix_weight")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_qep63"]
resource_name = "dash"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("playerSprite:material:shader_parameter/whiten")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("playerEyeSprite:material:shader_parameter/whiten")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("playerEyeSprite:material:shader_parameter/mix_weight")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(3.5, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("playerSprite:material:shader_parameter/mix_weight")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(3.5, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l18q3"]
_data = {
&"RESET": SubResource("Animation_3d672"),
&"dash": SubResource("Animation_qep63")
}

[node name="PlayerCharacter" type="CharacterBody2D"]
z_index = 1
position = Vector2(0, 1)
scale = Vector2(1.00805, 1)
collision_layer = 2
collision_mask = 17
floor_stop_on_slope = false
floor_max_angle = 1.309
floor_snap_length = 10.0
script = ExtResource("1_c2kd2")

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -13)
shape = SubResource("RectangleShape2D_2ywmw")

[node name="SpawnpointDetection" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 8

[node name="SpawnpointDetectionCollision" type="CollisionShape2D" parent="SpawnpointDetection"]
position = Vector2(0, -15)
shape = SubResource("CapsuleShape2D_f2j5l")

[node name="DeathDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="DeathDetectionCollision" type="CollisionShape2D" parent="DeathDetection"]
position = Vector2(0, -12)
shape = SubResource("CapsuleShape2D_f2j5l")

[node name="PlayerCamera" type="Camera2D" parent="."]
position_smoothing_enabled = true
position_smoothing_speed = 15.0
script = ExtResource("2_yxov5")

[node name="HUD" type="CanvasLayer" parent="."]
process_mode = 3

[node name="PauseMenu" parent="HUD" instance=ExtResource("3_lwsbi")]
process_mode = 3

[node name="DashTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.2
one_shot = true

[node name="PlayerSpriteAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ce6h6")
}

[node name="playerSprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_3d672")
position = Vector2(0, -13)
texture = ExtResource("9_vx43m")
offset = Vector2(0, -4)
hframes = 8
vframes = 6

[node name="playerEyeSprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_qep63")
position = Vector2(0, -13)
texture = ExtResource("5_w3pip")
offset = Vector2(0, -4)
hframes = 8
vframes = 6

[node name="playerStarsParallax" type="ParallaxBackground" parent="."]
layer = -2
script = ExtResource("6_85wnx")

[node name="ParallaxLayer" type="ParallaxLayer" parent="playerStarsParallax"]
z_index = -2
motion_scale = Vector2(0.01, 0.01)
motion_mirroring = Vector2(480, 270)

[node name="Sprite2D" type="Sprite2D" parent="playerStarsParallax/ParallaxLayer"]
position = Vector2(240, 135)
texture = ExtResource("6_msyva")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="playerStarsParallax"]
z_index = -2
motion_scale = Vector2(0.02, 0.02)
motion_mirroring = Vector2(480, 270)

[node name="Sprite2D" type="Sprite2D" parent="playerStarsParallax/ParallaxLayer2"]
position = Vector2(240, 135)
texture = ExtResource("7_ukj1r")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="playerStarsParallax"]
z_index = -2
motion_scale = Vector2(0.05, 0.05)
motion_mirroring = Vector2(480, 270)

[node name="Sprite2D" type="Sprite2D" parent="playerStarsParallax/ParallaxLayer3"]
position = Vector2(240, 135)
texture = ExtResource("8_qmn1e")

[node name="SlideAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_oggeb")
bus = &"Sound effects"
parameters/looping = true

[node name="SlidingParticles" type="CPUParticles2D" parent="."]
position = Vector2(0, -7)
amount = 25
lifetime = 0.2
randomness = 1.0
lifetime_randomness = 1.0
emission_shape = 3
emission_rect_extents = Vector2(8, 1)
direction = Vector2(0, -1)
spread = 80.0
gravity = Vector2(0, 50)
initial_velocity_min = 50.0
initial_velocity_max = 100.0
scale_amount_max = 2.0

[node name="JumpingParticles" type="CPUParticles2D" parent="."]
visible = false
position = Vector2(0, -5)
emitting = false
amount = 20
lifetime = 0.5
one_shot = true
explosiveness = 1.0
randomness = 1.0
lifetime_randomness = 1.0
emission_shape = 3
emission_rect_extents = Vector2(4, 1)
direction = Vector2(0, 1)
spread = 50.0
gravity = Vector2(0, 200)
initial_velocity_min = 30.0
initial_velocity_max = 50.0
scale_amount_max = 2.0

[node name="LandingParticles" type="CPUParticles2D" parent="."]
position = Vector2(0, -1)
emitting = false
amount = 20
lifetime = 0.5
one_shot = true
explosiveness = 0.8
randomness = 1.0
lifetime_randomness = 1.0
emission_shape = 3
emission_rect_extents = Vector2(4, 1)
direction = Vector2(0, -1)
spread = 90.0
gravity = Vector2(0, 100)
initial_velocity_min = 20.0
initial_velocity_max = 40.0
scale_amount_max = 2.0

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(1.27771, -18)
energy = 0.05
texture = SubResource("GradientTexture2D_wi17q")
texture_scale = 4.0

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
position = Vector2(-111.722, -9)
energy = 0.8
blend_mode = 1

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_wi17q")

[node name="WhitenAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_l18q3")
}

[connection signal="body_entered" from="SpawnpointDetection" to="." method="_on_spawnpoint_detection_body_entered"]
[connection signal="area_entered" from="DeathDetection" to="." method="_on_death_detection_area_entered"]
[connection signal="body_entered" from="DeathDetection" to="." method="_on_death_detection_body_entered"]
